<resources>

    <string name="app_name">My App Portfolio</string>

    <string name="layout_title">My Nanodegree Apps!</string>
    <string name="layout_spotify_streamer_button">Spotify Streamer</string>
    <string name="layout_scores_app_button">Scores App</string>
    <string name="layout_library_app_button">Library App</string>
    <string name="layout_build_it_bigger_button">Build It Bigger</string>
    <string name="layout_xyz_reader_button">XYZ Reader</string>
    <string name="layout_capstone_button">Capstone: My Own App</string>

    <string name="toast_spotify_streamer">This button will launch Spotify Streamer!</string>
    <string name="toast_scores_app">This button will launch Scores App!</string>
    <string name="toast_library_app">This button will launch Library App!</string>
    <string name="toast_build_it_bigger">This button will launch Build It Bigger!</string>
    <string name="toast_xyz_reader">This button will launch XYZ Reader!</string>
    <string name="toast_capstone_project">This button will launch Capstone Project!</string>

</resources>
