<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:textSize="24sp"
        android:text="@string/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:text="@string/layout_spotify_streamer_button"
            android:onClick="launchSpotifyStreamer"
            style="@style/ButtonStyle" />

        <Button
            android:text="@string/layout_scores_app_button"
            android:onClick="launchScoresApp"
            style="@style/ButtonStyle" />

        <Button
            android:text="@string/layout_library_app_button"
            android:onClick="launchLibraryApp"
            style="@style/ButtonStyle" />

        <Button
            android:text="@string/layout_build_it_bigger_button"
            android:onClick="launchBuildItBigger"
            style="@style/ButtonStyle" />

        <Button
            android:text="@string/layout_xyz_reader_button"
            android:onClick="launchXyzReader"
            style="@style/ButtonStyle" />

        <Button
            android:text="@string/layout_capstone_button"
            android:onClick="launchCapstone"
            style="@style/CapstoneButtonStyle" />

    </LinearLayout>

</LinearLayout>
